2012-08-16  Abhishek Arya  <inferno@chromium.org>

        Regression(r118248): Replaced element not layout
        https://bugs.webkit.org/show_bug.cgi?id=85804

        Reviewed by Levi Weintraub.

        * fast/replaced/replaced-last-line-layout-expected.html: Added.
        * fast/replaced/replaced-last-line-layout.html: Added.

2012-08-16  Adam Barth  <abarth@webkit.org>

        DirectoryEntry should use Dictionary rather than custom bindings code
        https://bugs.webkit.org/show_bug.cgi?id=94207

        Reviewed by Eric Seidel.

        This patch changes our behavior slightly in that passing a non-object
        as a flags Dictionary throws an exception rather than being treated as
        an empty dictionary. This new behavior matches the WebIDL spec and
        hopefully won't cause compat problems.

        * fast/filesystem/flags-passing-expected.txt:
        * fast/filesystem/script-tests/flags-passing.js:
        (runNullTest):
        (runNonObjectTest):

2012-08-16  Brady Eidson  <beidson@apple.com>

        http/tests/security/contentSecurityPolicy/shared-worker-connect-src-blocked.html fails (results weren't updated in r125772)
        https://bugs.webkit.org/show_bug.cgi?id=94236

        Unreviewed (test gardening)

        * http/tests/security/contentSecurityPolicy/shared-worker-connect-src-blocked-expected.txt: Update results here, like the rest of 125772 did.

2012-08-15  Levi Weintraub  <leviw@chromium.org>

        Accumulate sub-pixel offsets through layers and transforms
        https://bugs.webkit.org/show_bug.cgi?id=89238

        Reviewed by Eric Seidel.

        * fast/sub-pixel/sub-pixel-accumulates-to-layers.html: Added.
        * platform/chromium-mac/compositing/shadows/shadow-drawing-expected.png:
        * platform/chromium-mac/fast/repaint/scroll-fixed-layer-with-transformed-parent-layer-expected.png:
        * platform/chromium-mac/fast/sub-pixel/sub-pixel-accumulates-to-layers-expected.png: Added.