@@ -1,6 +1,0 @@
-<!DOCTYPE html>
-<body style="width: 51px">
-<div id=flexbox style="-webkit-box-orient: vertical; -webkit-line-clamp: 1; display: -webkit-box; background-color: salmon; overflow:hidden">
-    <span>AAA </span><a href=#>X</a>
-</div>
-</body>
