@@ -1,3 +1,13 @@
+2012-08-16  Ojan Vafai  <ojan@chromium.org>
+
+        Fix test added in r125635. The test failed on non-chromium ports due
+        to the column sizing 1px differently. I'm not really sure what was going on,
+        but this was a fix for a crash anyways. Just marking the test dumpAsText.
+
+        * fast/overflow/line-clamp-and-columns-expected.html: Removed.
+        * fast/overflow/line-clamp-and-columns-expected.txt: Added.
+        * fast/overflow/line-clamp-and-columns.html:
+
 2012-08-16  Abhishek Arya  <inferno@chromium.org>
 
         Regression(r118248): Replaced element not layout
